Fix FF66+ layout issue. Update some deps.

--- a/client/meetings.css
+++ b/client/meetings.css
@@ -61,6 +61,7 @@ body {
 .room_container {
     margin-right: 20px;
     max-height: 100%;
+    display: table;
 }
 
 .room_container:last-child {
